--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,36 @@ layout: default
 
 <article>
   <p class="post-meta">
-    <time datetime="{{ page.date }}">{{ page.date | date: site.theme_config.date_format }}</time>
+    <time datetime="{{ page.date }}"
+      >{{ page.date | date: site.theme_config.date_format }}</time
+    >
   </p>
-  
+
   <h1>{{ page.title }}</h1>
 
   {{ content }}
 </article>
+
+<!-- FOOTER -->
+<hr>
+<p>
+  Okuduğunuz için teşekkürler. Konuyla ilgili ekleme, düzeltme yapmak ya da
+  tartışmak isterseniz memnuniyetle karşılık veririm. <br />
+  <!-- insert social links (twitter and email) -->
+  <div style="text-align: center;">
+  <a
+    href="{{site.theme_config.twitter}}"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    twitter
+  </a>
+  |
+  <a
+    href="mailto:{{site.theme_config.email}}"
+    rel="noopener noreferrer"
+  >
+    {{site.theme_config.email}}
+  </a>
+  </div>
+</p>
