--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,4 +1,6 @@
 // -------------- THEME SWITCHER -------------- //
+
+
 @mixin dark-appearance {
   filter: invert(1);
   img {
@@ -10,18 +12,24 @@
 
 body[a="dark"] { @include dark-appearance; }
 
-
 @media (prefers-color-scheme: dark) {
   body[a="auto"] { @include dark-appearance; }
 }
+
+
 // -------------------------------------------- //
 
 // bg color is also needed in html in order to
 // block body's background propagation
 // see: https://stackoverflow.com/a/61265706
-html, body { background: white; }
+html,
+body {
+  background: rgb(219, 219, 219);
+}
 
-html { height: 100%; }
+html {
+  height: 100%;
+}
 
 body {
   color: black;
@@ -33,17 +41,44 @@ body {
   overflow-wrap: break-word;
 }
 
-.post-meta { text-align: right; }
+.post-meta {
+  text-align: right;
+}
+h1{
+  font-size: 2rem;
+  font-family: 'Courier New', Courier, monospace;
+  color: #00a347;
+}
 
-h2, h3, h4, h5, h6 { margin-top: 3rem; }
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 3rem;
+}
 
-hr { margin: 2rem 0; }
+hr {
+  margin: 2rem 0;
+}
 
-p { margin: 1rem 0; }
+p {
+  margin: 1rem 0;
+}
 
-li { margin: 0.4rem 0; }
+li {
+  margin: 0.4rem 0;
+}
 
-*:target { background: yellow; }
+a {
+  color: #f26419;
+  text-decoration: none;
+}
+
+
+*:target {
+  background: #38618c;
+}
 
 .w {
   max-width: 640px;
@@ -55,13 +90,21 @@ hr {
   text-align: center;
   border: 0;
 
-  &:before { content: '/////' }
-  &:after { content: attr(data-content) '/////' }
+  &:before {
+    content: "/////";
+  }
+  &:after {
+    content: attr(data-content) "/////";
+  }
 }
 
-table { width: 100%; }
+table {
+  width: 100%;
+}
 
-table, th, td {
+table,
+th,
+td {
   border: thin solid black;
   border-collapse: collapse;
   padding: 0.4rem;
@@ -81,10 +124,12 @@ div.highlighter-rouge code {
 
 blockquote {
   font-style: italic;
-  border: thin solid black;
+  border: thin solid rgb(172, 56, 56);
   padding: 1rem;
 
-  p { margin: 0; }
+  p {
+    margin: 0;
+  }
 }
 
 img {
