--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -3,11 +3,11 @@
 
 @mixin dark-appearance {
   filter: invert(1);
-  img {
-    filter: invert(1);
+  // img {
+  //   filter: invert(1);
 
-    &.ioda { filter: invert(0); }
-  }
+  //   &.ioda { filter: invert(0); }
+  // }
 }
 
 body[a="dark"] { @include dark-appearance; }
