add en & theme swticher

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   <body a="{{ site.theme_config.appearance | default: "auto" }}">
     <main class="page-content" aria-label="Content">
       <div class="w">
+          <button id="mode"><span id="mode-text" class="emoji">🌕</span></button>
         {{ content }}
       </div>
     </main>
@@ -12,10 +13,8 @@
       {%-include goat_counter.html-%}
     {%-endif-%}
 
-    {% if page.custom_js %}
-      {% for js_file in page.custom_js %}
-        <script type="text/javascript" src="{{ site.baseurl }}/assets/js/{{ js_file }}.js"></script>
-      {% endfor %}
-    {% endif %}
+
+        <script type="text/javascript" src="{{ site.baseurl }}/assets/js/mode-change.js"></script>
+      
   </body>
 </html>
