--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,13 +1,15 @@
 ---
 layout: default
 ---
+
 <header>
   <h1>{{ site.title }}</h1>
   {%-if site.theme_config.show_description-%}
-    <p>{{ site.description }}</p>
+  <p>{{ site.description }}</p>
   {%-endif-%}
 </header>
 
 {%-include menu_item.html collection=site.data.menu.entries-%}
+<button id="theme-toggle">Switch Theme</button>
 
 {{ content }}
