--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <body a="{{ site.theme_config.appearance | default: "auto" }}">
     <main class="page-content" aria-label="Content">
       <div class="w">
-          <button id="mode"><span id="mode-text" class="emoji">🌕</span></button>
+          <!-- <button id="mode"><span id="mode-text" class="emoji">🌕</span></button> -->
         {{ content }}
       </div>
     </main>
