--- a/_includes/menu_item.html
+++ b/_includes/menu_item.html
@@ -1,33 +1,35 @@
+
 <ul>
-  {%-for item in include.collection-%}
+  {%- for item in include.collection -%}
     <li>
-    {%- if item.url -%}
-      <a href="{{ item.url }}">{{ item.title }}</a>
-    {%- else -%}
-
-       {%-if item.bold-%}
-      <b>{{ item.title }}</b>
+      {%- if item.url -%}
+        <a href="{{ item.url }}">{{ item.title }}</a>
       {%- else -%}
-      {{ item.title }}
-      {%-endif-%}
-    {%- endif -%}
+        {%- if item.bold -%}
+          <b>{{ item.title }}</b>
+        {%- else -%}
+          {{ item.title }}
+        {%- endif -%}
+      {%- endif -%}
+      
     </li>
+    {%- if item.category -%}
+      <li>Category: {{ item.category }}</li>
+    {%- endif -%}
 
+    {%- if item.post_list -%}
+      {%- include post_list.html
+        category=item.post_list.category
+        limit=item.post_list.limit
+        show_more=item.post_list.show_more
+        show_more_text=item.post_list.show_more_text
+        show_more_url=item.post_list.show_more_url
+      -%}
+    {%- endif -%}
+ 
 
-
-    {%-if item.post_list-%}
-      {%
-        include post_list.html
-          category=item.post_list.category
-          limit=item.post_list.limit
-          show_more=item.post_list.show_more
-          show_more_text=item.post_list.show_more_text
-          show_more_url=item.post_list.show_more_url
-     -%}
-    {%-endif-%}
-
-    {%-if item.entries-%}
-      {%-include menu_item.html collection=item.entries-%}
-    {%-endif-%}
-  {%-endfor-%}
+    {%- if item.entries -%}
+      {%- include menu_item.html collection=item.entries -%}
+    {%- endif -%}
+  {%- endfor -%}
 </ul>
