--- a/_layouts/category_archive.html
+++ b/_layouts/category_archive.html
@@ -7,9 +7,10 @@ layout: default
 <!-- list all categories -->
 {%-include category_list.html-%}
 
+
 <h1>{{ page.title }}</h1>
 
-<div
-style="color:#929292 ;">{{page.description}}</div>
+<div>{{page.description}}</div>
 
 {%-include post_list.html category=page.which_category-%}
+
