--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -30,9 +30,11 @@ body[a="dark"] {
 // bg color is also needed in html in order to
 // block body's background propagation
 // see: https://stackoverflow.com/a/61265706
+
+
 html,
 body {
-  background: rgb(219, 219, 219);
+  background: rgb(255, 255, 255);
 }
 
 html {
@@ -41,8 +43,8 @@ html {
 
 body {
   color: black;
-  font-family: monospace;
   font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   line-height: 1.4;
   margin: 0;
   min-height: 100%;
@@ -54,7 +56,7 @@ body {
 }
 h1 {
   font-size: 2rem;
-  font-family: "Courier New", Courier, monospace;
+  font-family:'Trebuchet MS', sans-serif;
   color: #00a347;
 }
 
@@ -64,6 +66,7 @@ h4,
 h5,
 h6 {
   margin-top: 3rem;
+  color: #00a347;;
 }
 
 hr {
@@ -78,9 +81,18 @@ li {
   margin: 0.4rem 0;
 }
 
+li b{
+  color: #00a347;
+
+}
+
 a {
-  color: #f26419;
+  color: #ff6a1a;
   text-decoration: none;
+}
+
+a:hover{
+  color: #00a347;
 }
 
 *:target {
@@ -95,14 +107,9 @@ a {
 
 hr {
   text-align: center;
-  border: 0;
-
-  &:before {
-    content: "/////";
-  }
-  &:after {
-    content: attr(data-content) "/////";
-  }
+  width: 50%;
+  margin: 2rem auto;
+  border: 1px solid #ff6a1a;
 }
 
 table {
@@ -131,7 +138,7 @@ div.highlighter-rouge code {
 
 blockquote {
   font-style: italic;
-  border: thin solid rgb(172, 56, 56);
+  border: thin solid #00a347;
   padding: 1rem;
 
   p {
