i have commitment issues

--- a/_includes/back_link.html
+++ b/_includes/back_link.html
@@ -1,1 +1,3 @@
 <a href="{{ "/" | relative_url }}">{{ site.theme_config.back_home_text }}</a>
+<!-- also include /blog if its a sub page of blog -->
+| <a href="{{ "/blog" | relative_url }}">tüm yazılar</a>
