--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -25,13 +25,19 @@ body[a="dark"] {
   }
 }
 
+:root{
+  --primary: #2e294e;
+  --secondary: #c9184a;
+}
+
 // -------------------------------------------- //
 
 // bg color is also needed in html in order to
 // block body's background propagation
 // see: https://stackoverflow.com/a/61265706
 
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 html,
 body {
   background: rgb(255, 255, 255);
@@ -43,12 +49,12 @@ html {
 
 body {
   color: black;
-  font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 20px;
   line-height: 1.4;
   margin: 0;
   min-height: 100%;
   overflow-wrap: break-word;
+  font-family: 'Raleway', sans-serif;
 }
 
 .post-meta {
@@ -56,8 +62,7 @@ body {
 }
 h1 {
   font-size: 2rem;
-  font-family:'Trebuchet MS', sans-serif;
-  color: #00a347;
+  color: var(--primary);
 }
 
 h2,
@@ -66,7 +71,7 @@ h4,
 h5,
 h6 {
   margin-top: 3rem;
-  color: #00a347;;
+  color: var(--primary);;
 }
 
 hr {
@@ -82,17 +87,17 @@ li {
 }
 
 li b{
-  color: #00a347;
+  color: var(--primary);
 
 }
 
 a {
-  color: #ff6a1a;
+  color: var(--secondary);
   text-decoration: none;
 }
 
 a:hover{
-  color: #00a347;
+  color: var(--primary);
 }
 
 *:target {
@@ -109,7 +114,7 @@ hr {
   text-align: center;
   width: 50%;
   margin: 2rem auto;
-  border: 1px solid #ff6a1a;
+  border: 1px solid var(--secondary);
 }
 
 table {
@@ -138,7 +143,7 @@ div.highlighter-rouge code {
 
 blockquote {
   font-style: italic;
-  border: thin solid #00a347;
+  border: thin solid var(--primary);
   padding: 1rem;
 
   p {
