--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -4,7 +4,8 @@ layout: default
 
 {%-include back_link.html-%}
 
-<!-- list all categories %-include category_list.html-% -->
+<!-- list all categories  -->
+{%-include category_list.html-%}
 
 
 <h1>{{ page.title }}</h1>
