--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,25 @@ layout: default
 ---
 
 <header>
-  <h1>{{ site.title }}</h1>
+  {%- if page.lang != 'en' -%}
+    <a href="/en/">english</a>
+  {%- else -%}
+    <a href="/">türkçe</a>
+  {%- endif -%}
+
+
+  <h1>{{ site.title }}</h1> 
+ 
   {%-if site.theme_config.show_description-%}
   <p>{{ site.description }}</p>
   {%-endif-%}
 </header>
-{%-include menu_item.html collection=site.data.menu.entries-%} {{ content }}
+{%- if page.lang == 'en' -%}
+  {%- include menu_item.html collection=site.data.en.menu.entries -%}
+  {{ content }}
+{%- else -%}
+  {%- include menu_item.html collection=site.data.menu.entries -%}
+  {{ content }}
+{%- endif -%}
+
+
