--- a/_includes/back_link.html
+++ b/_includes/back_link.html
@@ -1,3 +1,9 @@
-<a href="{{ "/" | relative_url }}">{{ site.theme_config.back_home_text }}</a>
-<!-- also include /blog if its a sub page of blog -->
-| <a href="{{ "/blog" | relative_url }}">tüm yazılar</a>
+{% if page.lang == 'en' %}
+<!-- Add English specific link or text -->
+    <a href="{{ '/en' | relative_url }}">{{ site.theme_config.en_back_home_text }}</a>
+|   <a href="{{ '/en/blog' | relative_url }}">all posts</a>
+{% else %}
+<!-- Add Turkish specific link or text -->
+<a href="{{ '/' | relative_url }}">{{ site.theme_config.back_home_text }}</a>
+    | <a href="{{ '/blog' | relative_url }}">tüm yazılar</a>
+{% endif %}
